vista formulario usuario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.application.name=SpringHospital
 spring.datasource.url=jdbc:mysql://localhost:3306/springhospital?createDatabaseIfNotExist=true
 
 #agregamos
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
