google cloud storage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.application.name=SpringHospital
 
 spring.datasource.url=jdbc:mysql://localhost:3306/springhospital?createDatabaseIfNotExist=true
 
-#agregamos
+#agregamos la modalidad de creación de la BDD y para que Hibernate nos muestre el SQL
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#agregamos la manera en que se va a inicializar la BDD a partir de un script sql
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
