Integraciones GCP, JWT, SendGrid

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,16 @@ spring.jpa.show-sql=true
 #agregamos la manera en que se va a inicializar la BDD a partir de un script sql
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+#Esta variable contiene el nombre del bucket creado en GCP
+bucket.name=
+
+#Esta variable contiene el mail registrado como sender en SendGrid
+sendgrid.sender.email=
+#Esta variable contiene la key generada por SendGrid para el envío de correos
+sendgrid.api.key=
+
+#Esta variable contiene la firma que se agrega al jwt, debe tener al menos 32 caractéres
+jwt.secret=
+#Esta variable corresponde a la duración máxima que tendrá el token generado
+jwt.expiration.ms=
